--- a/计算机网络学习笔记.md
+++ b/计算机网络学习笔记.md
@@ -24,6 +24,23 @@
 
 ##### session && cookie系列问题
 
+##### ping过程发生了什么
+
+ping是应用层之恶杰使用网络层的ICMP协议，没有使用TCP/UDP。
+
+![img](https://ss.csdn.net/p?https://mmbiz.qpic.cn/mmbiz/yNKv1P4Q9eUMkKtiawTALIBxYU2OZiatV35icoonmSEARAPJPorb0ibvkgkvUSxEeEgxeKFjm72W0Mtxtfk9Q1LiawQ/640?wx_fmt=other)
+
+1. 构建一个ICMP回送请求消息数据包，`类型 = 8`，`序号 =1 `实则是ip数据包；
+
+   <img src="E:\CS\cs-note\img\icmp.jpg" alt="image-20200704202900651" style="zoom:80%;" />
+
+2. 将得到的MAC地址封装到IP数据包中
+
+![image-20200704203021691](E:\CS\cs-note\img\MAC.jpg)
+
+3. 主机`B`接受到请求以后，首先会检查MAC地址是否一致，如果校验正确，提取IP数据包，将有用的信息给ICMP协议；
+4. 主机`B` 构建一个回送响应数据包，`类型 = 0`.
+
 
 
 #### 正文
