--- a/操作系统经典问题.md
+++ b/操作系统经典问题.md
@@ -26,7 +26,13 @@
 
 进程是**资源分配的单位**,本质上就是指的一个运行的程序,cpu在每个进程上切换。
 
+进程可以用来管理内存、IO、加载指令。一个进程可以看作是一个程序的实例。
+
+
+
 线程是**独立调度的单位**，一个进程中包含多个线程，如果从jvm中的角度来看，堆、元空间的数据是是多个线程共享的，程序计数器、本地方法栈、虚拟机栈的数据是每个线程私有的。
+
+
 
 **区别**
 
@@ -39,9 +45,11 @@
 2)就绪态（可运行，但因为其他进程正在运行而暂时停止）。
 3)阻塞态（除非某种外部事件发生，否则进程不能运行）。
 
-![image-20200704164449056](E:\CS\cs-note\img\pid-status)
+![image-20200704164449056](.\img\pid-status)
 
 #### 4. 进程间的通信方式
+
+   同一台计算机之间的进程通信方式 — **IPC**
 
 1. **管道/匿名管道(Pipes)** ：用于具有亲缘关系的**父子进程**间或者**兄弟进程**之间的通信。
 2. **有名管道(Names Pipes)** : 匿名管道由于没有名字，只能用于亲缘关系的进程间通信。为了克服这个缺点，提出了有名管道。有名管道严格遵循**先进先出(first in first out)**。有名管道以磁盘文件的方式存在，可以实现本机任意两个进程通信。
@@ -53,11 +61,17 @@
 
 #### 5. 并发与并行
 
-并发指的是**宏观上在同一时间可以执行多个程序**；
+`windows`的最小CPU分配是`15ms`
+
+并发指的是**宏观上在同一时间可以执行多个程序**,微观上其实是串行的；
 
 并行指的是**同一时刻可以运行多个指令**，比如多核处理器。
 
-操作系统通过引入进程和线程，使得程序能够并发运行。
+一般情况下，线程数是大于core数目的，所以程序运行中既有并行也有并发。
+
+> **并发：** 同一时刻应对（deal with）多件事情；
+>
+> **并行：**同一时刻动手做（doing）多件事情。
 
 #### 6. 线程间的通信方式
 
@@ -82,7 +96,7 @@
 
 ### 二、 内存管理
 
-#### 1. **操作系统的内存管理机制了解吗？内存管理有哪几种方式?**
+#### 1. 操作系统的内存管理机制了解吗？内存管理有哪几种方式?
 
 1. **块式管理** ： 远古时代的计算机操系统的内存管理方式。将内存分为几个固定大小的块，每个块中只包含一个进程。如果程序运行需要内存的话，操作系统就分配给它一块，如果程序运行只需要很小的空间的话，分配的这块内存很大一部分几乎被浪费了。这些在每个块中未被利用的空间，我们称之为碎片。
 2. **页式管理** ：把主存分为大小相等且固定的一页一页的形式，页较小，相对相比于块式管理的划分力度更大，提高了内存利用率，减少了碎片。页式管理通过**页表对应逻辑地址和物理地址**。
