--- a/计算机基础/操作系统经典问题.md
+++ b/计算机基础/操作系统经典问题.md
@@ -22,7 +22,7 @@
 
 > :grey_question:  什么时候会发生状态切换？如何切换？
 >
-> 1. 系统调用 （read/write)
+> 1. 系统调用 （read/write)，一般是使用一个软中断。
 > 2. 外部中断 (当外围设备完成用户请求的操作后，会向CPU发出相应的中断信号。硬盘读写结束)
 > 3. 异常 （发生了某些事先不可知的异常，会切换到处理此异常的内核相关程序中）
 
