--- a/计算机基础/操作系统经典问题.md
+++ b/计算机基础/操作系统经典问题.md
@@ -159,5 +159,25 @@
 - **LRU （Least Currently Used）页面置换算法（最近最久未使用页面置换算法）** ：LRU算法赋予每个页面一个访问字段，用来记录一个页面自上次被访问以来所经历的时间 T，当须淘汰一个页面时，选择现有页面中其 T 值最大的，即最近最久未使用的页面予以淘汰。
 - **LFU （Least Frequently Used）页面置换算法（最少使用页面置换算法）** : 该置换算法选择在之前时期使用最少的页面作为淘汰页。
 
+### 5. 死锁
 
+#### 5.1 死锁的必要条件
 
+1. **互斥： **资源在同一时刻只能允许一个进程访问；
+2. **占有且等待：**一个进程本身占有资源（一种或多种），同时还有资源未得到满足，正在等待其他进程释放该资源
+3. **不可抢占**
+4. **循环等待**
+
+#### 5.2 如何解决死锁
+
++ 死锁预防
+
+  预防以上2-3中的情况出现
+
++ 在使用前进行判断，只允许不会产生死锁的进程申请资源
+
+  `银行家算法`
+
+  
+
++ 死锁检测算法
