--- a/计算机基础/网络经典问题.md
+++ b/计算机基础/网络经典问题.md
@@ -85,7 +85,7 @@
 
 
 
-#### 2.3 浏览器缓存
+#### 2.3 谈一下浏览器缓存
 
 **缓存机制**
 
@@ -105,7 +105,7 @@
 
 协商缓存失效，返回200，重新返回资源和缓存标志
 
-协商缓存失效则返回304，继续使用缓存
+协商缓存未失效则返回304，继续使用缓存
 
 ---
 
@@ -130,7 +130,7 @@
 3. 磁盘中
 4. push cache ,仅保存在session中
 
-#### 2.4 http请求头
+#### 2.4 http请求头包含哪些信息
 
 ![img](https://camo.githubusercontent.com/58fa07938ad016e7da6ee63b6334ceb482900076/68747470733a2f2f75706c6f61642d696d616765732e6a69616e7368752e696f2f75706c6f61645f696d616765732f333137343730312d353136643833333766353834616663372e706e673f696d6167654d6f6772322f6175746f2d6f7269656e742f7374726970253743696d61676556696577322f322f772f31323430)
 
@@ -140,7 +140,7 @@ POST  /chapter17/user.html HTTP/1.1
 
 
 
-#### :blue_heart:ping过程发生了什么
+#### 🙋ping过程发生了什么
 
 `ping`使用网络层的ICMP协议，没有使用TCP/UDP。
 
@@ -160,3 +160,8 @@ POST  /chapter17/user.html HTTP/1.1
 **注意：**
 
 在局域网下要使用ARP协议根据 IP地址反查出计算机的 MAC地址。另外ARP是有缓存的，为了保证ARP的准确性，计算机会更新ARP缓存。（**所以ping命令结束后还有一次ARP请求，更新ARP的缓存**）
+
+#### 2.5 Get 和Post的区别
+
++ Get  请求资源、幂等性、安全、可缓存的、url长度限制、编码格式
++ Post  对指定的资源进行处理  、发送两次请求     `HttpSerlvetRequest`
