计算机网络

--- a/计算机基础/网络经典问题.md
+++ b/计算机基础/网络经典问题.md
@@ -98,6 +98,8 @@
   + Etag/if-none-match    `etag` 由服务器生成
   
     [服务器会优先验证ETag，一致的情况下，才会继续比对Last-Modified]()
+    
+    > 当打开一个新的页面时 ，浏览器会向服务器发送一个http请求，服务器会生成一个 Etag 码 ( 标识当前被请求的文件) 
 
 ---
 
@@ -105,7 +107,7 @@
 
 协商缓存失效，返回200，重新返回资源和缓存标志
 
-协商缓存未失效则返回304，继续使用缓存
+协商缓存有效，则返回304，继续使用缓存
 
 ---
 
